@@ -7,6 +7,8 @@
 	  operator
 	* HilbertSpace.fully_mixed()
 	* superoperators module (experimental)
+	* HilbertArray.trace_norm()
+	* HilbertArray.schatten_norm()
 
 === qitensor-0.10 (Dan Stahlke, 2012-10-27) ===
 	* can run doctests via 'setup.py test'
